<resources>
    <string name="app_name">NavigationDrawerFragments</string>

    <string name="txtV_email">elena.guzbla@gmail.com</string>
    <string name="txtV_username">Elena G</string>
    <string name="action_home">Home</string>
    <string name="action_books">Books</string>
    <string name="action_items">Items</string>
    <string name="navigation_subheader">More</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>

</resources>
